# TaskFlow

./: README.md  app.py  form_db.py  pyproject.toml  tasks.db
static/: styles.css
templates/: add_task.html  edit_task.html  index.html
